--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -36,13 +36,13 @@ jobs:
       
       - name: Run Build Script
         run: ./ci/macos/build-aarch64.sh
-  # windows:
-  #   runs-on: [self-hosted, Windows, x64]
-  #   env: 
-  #     ARCH: "x86_64"
-  #   steps:
-  #     - name: Checkout
-  #       uses: actions/checkout@v3
+  windows:
+    runs-on: windows-latest
+    env: 
+      ARCH: "x86_64"
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
       
-  #     # - name: Run Build Script
-  #     #   run: ./ci/windows/build.ps1
+      - name: Run Build Script
+        run: ./ci/windows/build.ps1
